fixes NPE errors